<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <br.com.i4people.safecity.component.ScreenBackground
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignBottom="@+id/emergencia_edicao_toolbar"
        android:padding="5dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_interno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/emergencia_edicao_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edicao_emergencia_telefone"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/emergencia_edicao_telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/emergencia_edicao_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="onClick"
                android:text="@string/edicao_contato_salvar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/emergencia_edicao_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />
        </LinearLayout>
    </ScrollView>

    <br.com.i4people.safecity.component.Toolbar
        android:id="@+id/emergencia_edicao_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>