<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF" >

    <br.com.i4people.safecity.component.ScreenBackground
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/personal_toolbar"
        android:padding="5dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_interno" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/personal_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <TextView
                android:id="@+id/personal_contato1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/personal_contato_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:id="@+id/personal_contato1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_emergencia"
                android:onClick="onClick"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/personal_text_contato1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/personal_contato_telefone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33A" />
            </LinearLayout>

            <TextView
                android:id="@+id/personal_contato2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/personal_contato_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:id="@+id/personal_contato2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_emergencia"
                android:onClick="onClick"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/personal_text_contato2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/personal_contato_telefone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33A" />
            </LinearLayout>

            <TextView
                android:id="@+id/personal_contato3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/personal_contato_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000" />

            <LinearLayout
                android:id="@+id/personal_contato3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_emergencia"
                android:onClick="onClick"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/personal_text_contato3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/personal_contato_telefone"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33A" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <br.com.i4people.safecity.component.Toolbar
        android:id="@+id/personal_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:layout_alignParentBottom="true"
        toolbar:tab_id="personalToolbarOption" />

</RelativeLayout>